cmake_minimum_required (VERSION 2.6)
project (cwalter)
add_library(cwalter SHARED cwalter.c)
find_package(Libssh2 REQUIRED CONFIG)
target_link_libraries(cwalter Libssh2::libssh2)
project (tests)
add_executable(tests test.c)
target_link_libraries(tests cwalter)

install (TARGETS cwalter DESTINATION include)
