cmake_minimum_required (VERSION 3.0)
include_directories(src tests)
project (cwalter VERSION 0.1)
add_library(cwalter SHARED ./src/cwalter.c)
find_package(Libssh2 REQUIRED CONFIG)
target_link_libraries(cwalter Libssh2::libssh2)
project (run_tests)
add_executable(run_tests ./tests/test.c)
target_link_libraries(run_tests cwalter)

install (TARGETS cwalter DESTINATION include)
